--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
